<resources>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="app_name">Toggle Switch Sample</string>


    <!-- Basic Samples -->
    <string name="two_items_switch_text">2 Items</string>
    <string name="three_items_switch_text">3 Items</string>
    <string name="n_items_switch_text">N Items</string>
    <string name="multi_select_items_switch_text">Multi Select</string>
    <string name="disabled">Disabled</string>

    <!-- Custom Samples -->
    <string name="match_parent_width">Match parent width</string>
    <string name="custom_colors">Custom colors</string>
    <string name="custom_sizes">Custom sizes</string>
    <string name="custom_borders">Custom borders</string>
    <string name="no_separator">No separator</string>

    <!-- Match parent width and height Samples -->
    <string name="match_parent_width_and_height">Match parent width and height</string>

    <!-- Separated Samples -->
    <string name="basic_separated">Basic separated</string>
    <string name="circle_separated">Circle separated</string>

    <!-- Custom View Samples -->
    <string name="image_and_text">Image and text</string>
    <string name="only_images">Only images</string>
    <string name="multiple_colors">Multiple colors</string>


    <string name="apple">Apple</string>
    <string name="lemon">Lemon</string>
    <string name="orange">Orange</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="down">Down</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="planets">
        <item>Earth</item>
        <item>Jupiter</item>
        <item>Mars</item>
        <item>Venus</item>
    </string-array>

    <string-array name="operators">
        <item>AND</item>
        <item>OR</item>
        <item>NOT</item>
    </string-array>

    <array name="menu_titles">
        <item>Basic Samples</item>
        <item>Custom Samples</item>
        <item>Match Parent Width and Height Sample</item>
        <item>Separated Samples</item>
        <item>Custom View Samples</item>
    </array>
</resources>
