<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/Label"
                android:text="@string/match_parent_width"/>

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/matchParentWidthToggleSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/operators"/>

            <TextView
                style="@style/Label"
                android:text="@string/custom_colors"/>

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/customColorsToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/planets"
                app:checkedBackgroundColor="@color/orange"
                app:checkedTextColor="@android:color/white"
                app:uncheckedBackgroundColor="@color/colorPrimaryDark"
                app:uncheckedTextColor="@color/green"
                app:separatorColor="@color/green"/>

            <TextView
                style="@style/Label"
                android:text="@string/custom_sizes"/>

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/customSizesToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:textToggleLeft="@string/apple"
                app:textToggleRight="@string/lemon"
                android:textSize="26sp"
                app:toggleHeight="82dp"
                app:toggleWidth="122dp"/>

            <TextView
                style="@style/Label"
                android:text="@string/custom_borders"/>

            <com.llollox.androidtoggleswitch.widgets.MultipleToggleSwitch
                android:id="@+id/customBordersToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/planets"
                app:borderRadius="8dp"
                app:borderWidth="4dp"
                app:checkedBorderColor="@color/teal"
                app:uncheckedBorderColor="@color/gray_border"/>

            <TextView
                style="@style/Label"
                android:text="@string/no_separator"/>

            <com.llollox.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/noSeparatorToggleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/planets"
                app:separatorVisible="false"/>

        </LinearLayout>

    </ScrollView>
</layout>