<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/Label"
            android:text="@string/match_parent_width"/>

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/matchParentWidthToggleSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/operators"/>

        <TextView
            style="@style/Label"
            android:text="@string/custom_colors"/>

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/customColorsToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/planets"
            app:activeBackgroundColor="@color/green"
            app:activeTextColor="@android:color/white"
            app:inactiveBackgroundColor="@color/colorPrimaryDark"
            app:inactiveTextColor="@color/gray_border"/>

        <TextView
            style="@style/Label"
            android:text="@string/custom_sizes"/>

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/customSizesToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/operators"
            android:textSize="22sp"
            app:toggleHeight="62dp"
            app:toggleWidth="82dp"/>

        <TextView
            style="@style/Label"
            android:text="@string/custom_borders"/>

        <belka.us.androidtoggleswitch.widgets.MultipleToggleSwitch
            android:id="@+id/multipleToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/planets" />

        <TextView
            style="@style/Label"
            android:text="@string/no_separator"/>

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/noSeparatorToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/planets"
            app:separatorVisible="false"/>

    </LinearLayout>

</ScrollView>